# ros-bag-websocket-server

./: .gitattributes  .gitignore  README.md  docker-compose.windows.yml  docker-compose.yml
builder/: Dockerfile
scripts/: entrypoint.sh
workspace/src/websocket_server/: CMakeLists.txt  package.xml
workspace/src/websocket_server/launch/: websocket_server.launch
workspace/src/websocket_server/scripts/: bagfile_player.py
